Opened 18 years ago

Closed 15 years ago

#701 closed bug (fixed)

[AboutHaiku] Time running isn't font sensitive (easy)

Reported by: diver Owned by: anevilyak
Priority: normal Milestone: R1
Component: Applications Version:
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Time running value isn't font sensitive. See screenshot.

Attachments (2)

Bitmap Clip 2 (24.0 KB ) - added by diver 18 years ago.
sshot
abouthaiku.PNG (28.2 KB ) - added by diver 18 years ago.
large font size

Download all attachments as: .zip

Change History (13)

comment:1 by diver, 18 years ago

Summary: [AboutHaiku] Time running isn't font sensitive[AboutHaiku] Time running isn't font sensetive

comment:2 by axeld, 18 years ago

Summary: [AboutHaiku] Time running isn't font sensetive[AboutHaiku] Time running isn't font sensitive

comment:3 by axeld, 18 years ago

It was correct before...

comment:4 by axeld, 18 years ago

Oh, it is font sensitive, only Haiku is not meant to run that long 8-) Should it break into a new line, or just leave out the seconds? What would it do after a few months?? :-))

comment:5 by diver, 18 years ago

I think it should it break into a new line as there is much space left :-)

by diver, 18 years ago

Attachment: Bitmap Clip 2 added

sshot

by diver, 18 years ago

Attachment: abouthaiku.PNG added

large font size

comment:6 by nielx, 16 years ago

Platform: All
Summary: [AboutHaiku] Time running isn't font sensitive[AboutHaiku] Time running isn't font sensitive (easy)

This probably qualifies as 'easy'.

comment:7 by diver, 15 years ago

Whole AboutHaiku app is't font sensitive, one could see it if font is set to 18 px.
Also AboutHaiku is not in Trac.

in reply to:  7 comment:8 by nielx, 15 years ago

Replying to diver:

Also AboutHaiku is not in Trac.

I do not know if it is necessary to add it. In the history of this bug database only three entries are about AboutSystem/AboutHaiku, and it is not that complex that it will be likely that bugs specific to the app will turn up.

comment:9 by diver, 15 years ago

True.

comment:10 by anevilyak, 15 years ago

Owner: changed from axeld to anevilyak

comment:11 by anevilyak, 15 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev28786.

Note: See TracTickets for help on using tickets.