Make the uptime view a multiline textview. This allows it to gracefully wrap the text instead of simply cutting it off when your uptime is too long to fit into the provided space. Fixes ticket #701.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@28786 a95241bf-73f2-0310-859d-f6bbb57e9c96